updated html, added rules page

--- a/web/public/rules.html
+++ b/web/public/rules.html
@@ -24,9 +24,8 @@
     </nav>
   </div>
   <div id="content">
-    <h1>hacker battleship</h1>
-    <div id="grid">
-    </div>
+    <h1>rules</h1>
+      <p>These are the rules:</p>
   </div>
 </body>
 </html>
