updated css to style the board, updated html to include demo board

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <link href='http://fonts.googleapis.com/css?family=Titillium+Web:600'
   rel='stylesheet' type='text/css'>
+  <link href='/css/reset.css' rel='stylesheet' type='text/css'>
   <link href='/css/main.css' rel='stylesheet' type='text/css'>
   <link href='/css/icon.css' rel='stylesheet' type='text/css'>
 </head>
@@ -24,9 +25,85 @@
     </nav>
   </div>
   <div id="content">
-    <h1>hacker battleship</h1>
-    <div id="grid">
-    </div>
+    <h1 class="topic">hacker battleship</h1>
+
+    <div class="container"><!-- begin the grid -->
+      <div class="board">
+
+        <ul class="clear">
+          <li data-id="a1"><i class="icon-droplet"></i></li>
+          <li data-id="b1"><i class="icon-droplet"></i></li>
+          <li data-id="c1"><i class="icon-fire"></i></li>
+          <li data-id="d1"><i class="icon-fire"></i></li>
+          <li data-id="e1"><i class="icon-fire"></i></li>
+          <li data-id="f1">F1</li>
+          <li data-id="g1"><i class="icon-miss"></i></li>
+        </ul>
+
+        <ul class="clear">
+          <li data-id="a2">A2</li>
+          <li data-id="b2"><i class="icon-fire"></i></li>
+          <li data-id="c2"><i class="icon-droplet"></i></li>
+          <li data-id="d2"><i class="icon-droplet"></i></li>
+          <li data-id="e2">E2</li>
+          <li data-id="f2">F2</li>
+          <li data-id="g2">G2</li>
+        </ul>
+
+        <ul class="clear">
+          <li data-id="a3">A3</li>
+          <li data-id="b3">B3</li>
+          <li data-id="c3"><i class="icon-droplet"></i></li>
+          <li data-id="d3"><i class="icon-droplet"></i></li>
+          <li data-id="e3"><i class="icon-droplet"></i></li>
+          <li data-id="f3">F3</li>
+          <li data-id="g3">G3</li>
+        </ul>
+
+        <ul class="clear">
+          <li data-id="a4"><i class="icon-droplet"></i></li>
+          <li data-id="b4">B4</li>
+          <li data-id="c4"><i class="icon-droplet"></i></li>
+          <li data-id="d4"><i class="icon-droplet"></i></li>
+          <li data-id="e4">E4</i></li>
+          <li data-id="f4">F4</i></li>
+          <li data-id="g4">G4</li>
+        </ul>
+
+        <ul class="clear">
+          <li data-id="a5">A5</li>
+          <li data-id="b5"><i class="icon-fire"></i></li>
+          <li data-id="c5"><i class="icon-fire"></i></li>
+          <li data-id="d5"><i class="icon-fire"></i></li>
+          <li data-id="e5">D5</li>
+          <li data-id="f5">E5</li>
+          <li data-id="g5">F5</li>
+        </ul>
+
+        <ul class="clear">
+          <li data-id="a6"><i class="icon-droplet"></i></li>
+          <li data-id="b6"><i class="icon-fire"></i></li>
+          <li data-id="c6"><i class="icon-fire"></i></li>
+          <li data-id="d6"><i class="icon-droplet"></i></li>
+          <li data-id="e6">E6</li>
+          <li data-id="f6">F6</li>
+          <li data-id="g6">G6</li>
+        </ul>
+
+        <ul class="clear">
+          <li data-id="a7">A7</li>
+          <li data-id="b7">B7</li>
+          <li data-id="c7"><i class="icon-fire"></i></li>
+          <li data-id="d7"><i class="icon-droplet"></i></li>
+          <li data-id="e7">E7</li>
+          <li data-id="f7">F7</li>
+          <li data-id="g7">G7</li>
+        </ul>
+      </div>
+    </div><!-- end of the grid -->
+
   </div>
+  <script src="/scripts/jquery.js" type="text/javascript"></script>
+  <script src="/scripts/hackerbattleship.js" type="text/javascript"></script>
 </body>
 </html>
