--- a/web/public/index.html
+++ b/web/public/index.html
@@ -8,24 +8,33 @@
   <link href='/css/icon.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <form id="loginform">
-    <legend>Login</legend>
-    <input type="text" name="user">
-    <input type="password" name="pass">
-    <input type="submit" value="login">
-  </form>
-  <div id="leftbar">
-    <img id="logo" src="/img/battleship.png" width="500" height="200">
-    <nav>
-      <ul>
-        <li><a href="/">home</a></li>
-        <li><a href="#">register</a></li>
-          <li><a href="/rules.html">rules</a></li>
-      </ul>
-    </nav>
+
+  <div id="statspanel">
+    <form id="loginform">
+      <legend>Login</legend>
+      <input type="text" name="user">
+      <input type="password" name="pass">
+     <input type="submit" value="login">
+    </form>
   </div>
-  <div id="content">
+
+  <nav>
+    &nbsp;|&nbsp;
+    <a href="/">home</a>
+    &nbsp;|&nbsp;
+    <a href="#">register</a>
+    &nbsp;|&nbsp;
+    <a href="/rules.html">rules</a>
+    &nbsp;|&nbsp;
+  </nav>
+
+  <img id="logo" src="/img/battleship.png" width="500" height="200">
+
+  <div id="leftbar">
     <h1 class="topic">hacker battleship</h1>
+  </div>
+
+  <div id="content">
 
     <div class="container"><!-- begin the grid -->
       <div class="board">
@@ -103,7 +112,9 @@
     </div><!-- end of the grid -->
 
   </div>
+
   <script src="/scripts/jquery.js" type="text/javascript"></script>
   <script src="/scripts/hackerbattleship.js" type="text/javascript"></script>
+
 </body>
 </html>
