--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href='http://fonts.googleapis.com/css?family=Titillium+Web:600'
-  rel='stylesheet' type='text/css'>
   <link href='/css/reset.css' rel='stylesheet' type='text/css'>
   <link href='/css/main.css' rel='stylesheet' type='text/css'>
   <link href='/css/icon.css' rel='stylesheet' type='text/css'>
@@ -22,9 +20,9 @@
     &nbsp;|&nbsp;
     <a href="/">home</a>
     &nbsp;|&nbsp;
-    <a href="#">register</a>
+    <a href="/register">register</a>
     &nbsp;|&nbsp;
-    <a href="/rules.html">rules</a>
+    <a href="/rules">rules</a>
     &nbsp;|&nbsp;
   </nav>
 
